--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "22.7.4",
+    "@types/react": "18.3.11",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.6.2"
   }
 }
