drizzle orm config

--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push":"npx drizzle-kit push",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@neondatabase/serverless": "^0.10.1",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.34.1",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
@@ -23,6 +28,8 @@
   "devDependencies": {
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
+    "drizzle-kit": "^0.25.0",
+    "jsx": "^0.9.89",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.6.2"
