--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
     "lucide-react": "^0.447.0",
+    "moment": "^2.30.1",
     "next": "14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "22.7.4",
     "@types/react": "18.3.11",
+    "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.25.0",
     "jsx": "^0.9.89",
     "postcss": "^8",
