--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-webcam": "^7.2.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
